--- a/css/chessicons.css
+++ b/css/chessicons.css
@@ -1,51 +1,3 @@
-/* .chessicons cg-board piece.bishop.white {
-  background-image: url("chessicons/wb.svg");
-}
-
-.chessicons cg-board piece.king.white {
-  background-image: url("chessicons/wk.svg");
-}
-
-.chessicons cg-board piece.knight.white {
-  background-image: url("chessicons/wn.svg");
-}
-
-.chessicons cg-board piece.pawn.white {
-  background-image: url("chessicons/wp.svg");
-}
-
-.chessicons cg-board piece.queen.white {
-  background-image: url("chessicons/wq.svg");
-}
-
-.chessicons cg-board piece.rook.white {
-  background-image: url("chessicons/wr.svg");
-}
-
-.chessicons cg-board piece.bishop.black {
-  background-image: url("chessicons/bb.svg");
-}
-
-.chessicons cg-board piece.king.black {
-  background-image: url("chessicons/bk.svg");
-}
-
-.chessicons cg-board piece.knight.black {
-  background-image: url("chessicons/bn.svg");
-}
-
-.chessicons cg-board piece.pawn.black {
-  background-image: url("chessicons/bp.svg");
-}
-
-.chessicons cg-board piece.queen.black {
-  background-image: url("chessicons/bq.svg");
-}
-
-.chessicons cg-board piece.rook.black {
-  background-image: url("chessicons/br.svg");
-} */
-
 cg-board {
   cursor: auto !important;
 }
@@ -74,8 +26,8 @@ span {
 }
 
 #board {
-  width: min(400px, 90vw, 95vh - 10em);
-  height: min(320px, 81vw);
+  width: min(400px, 90vw, 95vh - 10em) !important;
+  height: min(320px, 81vw) !important;
 }
 
 #boardInner {
@@ -95,10 +47,6 @@ span {
     grid-column: 1/2;
   }
 
-  #board {
-    grid-template-rows: 0px auto minmax(auto, 360px) 34px !important;
-    grid-template-columns: 320px 192px !important;
-  }
   .pgnvjs .moves.list > move-number {
     flex: 0 0 20% !important;
   }
@@ -161,13 +109,24 @@ body {
   border-radius: 10px;
 }
 
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-thumb {
+    background: darkcyan !important;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000 !important;
+  }
+}
+
 ::-webkit-scrollbar-thumb {
-  background: darkcyan;
+  background: gainsboro;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background: black;
 }
 
 *:focus {
