repair mobile games view and sort filtred by openings games

--- a/css/prep.css
+++ b/css/prep.css
@@ -30,6 +30,7 @@ table#games tr:has(td:hover) td {
 
 th {
   border: solid 2px black !important;
+  word-wrap: break-word;
 }
 
 #stats_container {
