add contour for white pieces

--- a/bazaszachowa-react/src/ChessEditor/style.css
+++ b/bazaszachowa-react/src/ChessEditor/style.css
@@ -1,11 +1,21 @@
+.white,
+.white * {
+  color: white;
+}
+
 .black,
 .black * {
   color: black;
 }
 
-.white,
-.white * {
+.whiteContour,
+.whiteContour * {
   color: white;
+}
+
+.blackContour,
+.blackContour * {
+  color: black;
 }
 
 .gray,
